# hf-mount

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.csi  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  REVIEW.md  TODO.md  WINDOWS_CSI_BUILD.md  build.rs  install.sh
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: _docker-build.yml  bench_perf.yml  bump-release.yml  ci.yml  csi-integration.yml  docker-csi.yml  docker.yml  release.yml  windows-build.yml
deploy/csi/: README.md  controller.yaml  csi-driver.yaml  kustomization.yaml  node.yaml  rbac.yaml  secret.yaml  storageclass.yaml
deploy/helm/hf-csi/: Chart.yaml  README.md  values.yaml
deploy/helm/hf-csi/templates/: _helpers.tpl  controller.yaml  csi-driver.yaml  node.yaml  pdb.yaml  rbac.yaml  secret.yaml  servicemonitor.yaml  storageclass.yaml
deploy/monitoring/: alerts.yaml  grafana-dashboard.json
doc/: BENCHMARKING.md
docs/: RUNBOOK.md
examples/: README.md  huggingface-transformers.yaml  jupyter-notebook.yaml  pytorch-imagenet.yaml
proto/: csi.proto
scripts/: deploy-csi.sh  fs_bench.sh  fs_latency_bench.sh  posix_test.sh  test-csi.sh  undeploy-csi.sh  wait-for-csi.sh
src/: auth.rs  cache.rs  cached_xet_client.rs  caching_client.rs  crypto.rs  csi.rs  daemon.rs  daemon_windows.rs  dirty_tracker.rs  error.rs  file_cache.rs  filename_crypto.rs  flush.rs  fs.rs  fuse.rs  heap_profiling.rs  hub_api.rs  inode.rs  lib.rs  main.rs  nfs.rs  overlay.rs  prefetch.rs  setup.rs  staging.rs  test_mocks.rs  vfs.rs  virtual_fs.rs  xet.rs
src/csi/: metrics.rs  mod.rs
src/virtual_fs/: attr.rs  core.rs  dir.rs  flush.rs  handle.rs  inode.rs  io.rs  lookup.rs  mod.rs  open.rs  poll.rs  prefetch.rs  rename.rs  staging.rs  tests.rs
tests/: PJDFSTEST.md  bench.rs  bench_compare.rs  bench_parallel_read.rs  cas_parallel_download.rs  csi_bidirectional.rs  csi_chaos.rs  csi_conformance.rs  csi_health.rs  csi_integration.rs  csi_unit.rs  dedup_bench.rs  fio_bench.rs  fio_compare.rs  fsx.rs  fsx_paranoid.rs  fuse_ops.rs  hub_api.rs  nfs_ops.rs  nfs_smoke.rs  overlay_ops.rs  pjdfstest.rs  pread_scaling.rs  repo_ops.rs  smoke.rs  sparse_concurrent_real.rs  sparse_delta_bench.rs  warm_cache_bench.rs  write_smoke.rs  xfstests.rs
tests/common/: bench.rs  fs_tests.rs  k8s.rs  mod.rs
