[package]
name = "hf-mount"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Mount Hugging Face Buckets and repos as a local filesystem using FUSE or NFS"
repository = "https://github.com/huggingface/hf-mount"
keywords = ["fuse", "nfs", "huggingface", "filesystem", "mount"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
# xet-core crates
xet-client = { git = "https://github.com/huggingface/xet-core.git", rev = "0d7808b" }
xet-core-structures = { git = "https://github.com/huggingface/xet-core.git", rev = "0d7808b" }
xet-data = { git = "https://github.com/huggingface/xet-core.git", rev = "0d7808b" }
xet-runtime = { git = "https://github.com/huggingface/xet-core.git", rev = "0d7808b" }

# External crates
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
fuser = "0.17"
futures = "0.3"
libc = "0.2"
nfsserve = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
uuid = { version = "1", features = ["v4"] }

[features]
vendored-openssl = ["openssl-sys/vendored"]

[dependencies.openssl-sys]
version = "0.9"
optional = true

[[bin]]
name = "hf-mount-fuse"
path = "src/bin/hf-mount-fuse.rs"

[[bin]]
name = "hf-mount-nfs"
path = "src/bin/hf-mount-nfs.rs"

[[bin]]
name = "hf-mount-daemon"
path = "src/bin/hf-mount-daemon.rs"
